--- a/react-todo/package.json
+++ b/react-todo/package.json
@@ -16,6 +16,9 @@
     "react-router-dom": "^6.26.1"
   },
   "devDependencies": {
+    "@babel/core": "^7.25.2",
+    "@babel/plugin-proposal-class-properties": "^7.18.6",
+    "@babel/plugin-proposal-optional-chaining": "^7.21.0",
     "@babel/preset-env": "^7.25.4",
     "@babel/preset-react": "^7.24.7",
     "@eslint/js": "^9.9.0",
